--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -56,7 +56,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        swift_version: [5.3, 5.4]
+        swift_version: [5.3, 5.4, 5.5]
         distro: [xenial, bionic, focal]
     steps:
     - uses: actions/checkout@v1
@@ -87,7 +87,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        swift_version: [5.3, 5.4]
+        swift_version: [5.3, 5.4, 5.5]
         distro: [centos8, amazonlinux2]
         include:
           - distro: centos8
@@ -117,7 +117,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        swift_version: [5.5, main]
+        swift_version: [main]
         distro: [xenial, bionic, focal]
         exclude:
           - swift_version: main
@@ -152,7 +152,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        swift_version: [5.5, main]
+        swift_version: [main]
         distro: [centos8, amazonlinux2]
         include:
           - distro: centos8
