--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -56,7 +56,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        swift_version: [5.3, 5.4, 5.5, 5.6]
+        swift_version: [5.3, 5.4, 5.6]
         distro: [xenial, bionic, focal]
         exclude:
           - swift_version: 5.6
