--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -56,11 +56,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        swift_version: [5.3, 5.4, 5.6]
-        distro: [xenial, bionic, focal]
-        exclude:
-          - swift_version: 5.6
-            distro: xenial
+        swift_version: [5.7]
+        distro: [bionic, focal]
     steps:
     - uses: actions/checkout@v1
       with:
