--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -90,6 +90,9 @@ jobs:
       matrix:
         swift_version: [main, 5.7]
         distro: [bionic, focal, jammy]
+        exclude:
+          - swift_version: 5.7
+            distro: jammy
     steps:
     - uses: actions/checkout@v1
       with:
