--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -8,6 +8,7 @@ jobs:
       fail-fast: false
       matrix:
         name: [macOS, macCatalyst, iOS, tvOS, macOS(SwiftPM)]
+        xcode_version: ['14.0']
         include:
           - name: macOS
             use_xcodebuild: true
@@ -35,6 +36,9 @@ jobs:
       destination: ${{ matrix.destination }}
       enable_codecov: ${{ matrix.enable_codecov }}
     steps:
+    - uses: maxim-lobanov/setup-xcode@v1
+      with:
+        xcode-version: ${{ matrix.xcode_version }}
     - uses: actions/checkout@v1
       with:
         submodules: recursive
