--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -88,7 +88,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        swift_version: [main, 5.7]
+        swift_version: [main]
         distro: [bionic, focal, jammy]
     steps:
     - uses: actions/checkout@v1
